--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "bin": {
-    "wilson": "./src/index.tsx"
+    "wilson": "./dist/index.js"
   },
   "scripts": {
     "dev": "bun run src/index.tsx",
@@ -18,6 +18,7 @@
     "ignore": "^7.0.5",
     "ink": "^5.0.1",
     "marked": "^17.0.1",
+    "postgres": "^3.4.8",
     "react": "^18.3.1",
     "react-devtools-core": "^7.0.1",
     "zod": "^3.23.8"
