--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wilson",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "type": "module",
   "bin": {
     "wilson": "./dist/index.js"
@@ -8,11 +8,12 @@
   "scripts": {
     "dev": "bun run src/index.tsx",
     "start": "bun run src/index.tsx",
-    "build": "bun build src/index.tsx --outdir dist --target node --minify",
+    "build": "bun build src/index.tsx --outdir dist --target node --minify --external @supabase/supabase-js",
     "typecheck": "tsc --noEmit",
     "link": "bun link"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "chalk": "^5.6.2",
     "cli-highlight": "^2.1.11",
     "ignore": "^7.0.5",
